--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ nav{
 h3{
     font-size: 29px;
 }
+.center{
+    text-align: center;
+}
 h1{
     font-size: 60px;
     font-weight: 900;
@@ -89,7 +92,7 @@ p{
 }
 .slide2{
     margin-left: 200px;
-    margin-top: -154px;
+    margin-top: -93px;
 }
 .slide2 img{
     height: 590px;
@@ -103,4 +106,16 @@ p{
     margin-left: -60px;
     margin-top: -269px;
     width: 700px;
+}
+.item{
+    padding: 30px;
+}
+.item i{
+    font-size: 90px;
+    border-radius: 3px;
+    margin-top: 30px;
+    margin-right: 10px;
+    padding: 30px;
+    color: rgb(248, 34, 116);
+    border: 2px solid rgb(248, 34, 116);
 }
