--- a/style.css
+++ b/style.css
@@ -154,42 +154,42 @@ p{
     justify-content: space-between;
  }
 .xitem1{
-    background-image: url(./image/1.jpg);
+    background-image: url(image/1.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
     height: 250px;
 }
 .xitem2{
-    background-image: url(./image/2.jpg);
+    background-image: url(image/2.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
     height: 250px;
 }
 .xitem3{
-    background-image: url(./image/3.jpg);
+    background-image: url(image/3.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
     height: 250px;
 }
 .xitem4{
-    background-image: url(./image/4.jpg);
+    background-image: url(image/4.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
     height: 250px;
 }
 .xitem5{
-    background-image: url(./image/5.jpg);
+    background-image: url(image/5.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
     height: 250px;
 }
 .xitem6{
-    background-image: url(./image/6.jpg);
+    background-image: url(image/6.jpg);
     background-size: cover;
     margin: 20px;
     width: 350px;
